# se-letters

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  check_micom_p120_obsolete.py  check_micom_p20_series.py  check_micom_ranges.py  comprehensive_galaxy_6000_check.py  debug_galaxy_data.py  force_test_result.json  galaxy_6000_sanity_check.py  galaxy_6000_specific_test.py  ibcatalogue_basic_info.txt  migrate_ibcatalogue_dates.py  postgresql_test_result.json  pyproject.toml  requirements.txt  test_ibcatalogue_schema.js  test_improved_search_space.py  test_mge_galaxy_6000_direct.py  test_no_device_type_filter.py  test_subrange_logic.py
chats/: cursor_create_architecture_documentatio.md
config/: config.yaml  env.example  postgresql.yaml  prompts.yaml
data/: document_metadata.duckdb  letters.duckdb  raw_document_processing.duckdb
data/test/: test-config.json
docs/: CRITICAL_FALLBACK_SYSTEM.md  DOCUMENTATION_ORGANIZATION_PLAN.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  DOCUMENTATION_VERSION_ASSESSMENT_REPORT.json  IBcatalogue_Analysis.md  JSON_OUTPUT_STORAGE.md  LETTER_DATABASE_DOCUMENTATION.md  LETTER_DATABASE_MANAGEMENT.md  MODELS_DOCUMENTATION.md  NEXTJS_IMPLEMENTATION_STATUS.md  NEXTJS_INTEGRATION_PLAN.md  Obsolescence Letter Matching Pipeline Project.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PIPELINE_IMPROVEMENT_IMPLEMENTATION.md  PIPELINE_IMPROVEMENT_PLAN.md  PIPELINE_PROCESSING_FLOW_DIAGRAMS.md  PIPELINE_VERSION_CONTROL.md  PIX2B_REAL_PIPELINE_TEST_SUMMARY.md  PRODUCTION_PIPELINE_ARCHITECTURE.md  PRODUCT_MAPPING_ENGINE_DOCUMENTATION.md  PRODUCT_MATCHING_INTEGRATION_PLAN.md  README.md  SERVICES_DOCUMENTATION.md  SOTA_PRODUCT_DATABASE_IMPLEMENTATION.md  TEST_REORGANIZATION_SUMMARY.md  VERSION_2.2.0_COMPLETION_SUMMARY.md  VERSION_AUTHOR_ALIGNMENT_RESULTS.json  VERSION_CONTROL_IMPLEMENTATION_SUMMARY.md  VERSION_HEADER_TEMPLATE.md
docs/ARCHIVE/: README.md
docs/PRODUCTION/: ARCHITECTURE.md  DATABASE_ENDPOINTS_TESTING_REPORT.md  DATABASE_LOCK_RESOLUTION.md  ENHANCED_TOKEN_TRACKING_TEST_SUMMARY.md  ERROR_RESOLUTION_SUMMARY.md  FINAL_DOCUMENTATION_VERSION_ASSESSMENT_REPORT.md  LLM_API_TRACKING_DOCUMENTATION.md  PIPELINE_WORKFLOW_V2_3.md  POSTGRESQL_IMPLEMENTATION_GUIDE.md  POSTGRESQL_MIGRATION_PLAN.md  PRODUCT_MATCHING_RULES_DOCUMENTATION.md  SCORING_SYSTEM_IMPLEMENTATION.md  STAGE1_IMPLEMENTATION_SUMMARY.md  VERSION_HEADER_TEMPLATE.md
docs/database/: IBCATALOGUE_DUCKDB_DOCUMENTATION.md  ibcatalogue_metadata.json
docs/guides/: modification_guidelines.markdown  search_solution_guidelines.markdown
docs/reports/: COMPLETE_IBCATALOGUE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_METADATA_EXTRACTION_GUIDE.md  COMPREHENSIVE_PIPELINE_REPORT.md  COMPREHENSIVE_PRODUCT_EXPORT_GUIDE.md  DETAILED_PIPELINE_ANALYSIS_SUMMARY.md  DOCUMENT_METADATA_SYSTEM_SUMMARY.md  DOCUMENT_VISUAL_PREVIEW_ENHANCEMENT.md  DUCKDB_COMPREHENSIVE_ANALYSIS.md  ENHANCED_DOCUMENT_PROCESSOR_SUMMARY.md  SETUP_COMPLETE.md  (+15 more)
reports/: README.md  database_report_generator.py
scripts/: README.md  align_versions_and_authors.py  analyze_duckdb_schemas.py  cleanup_duplicate_records.py  cleanup_locks.py  convert_json_to_duckdb.py  debug_postgresql_storage.py  demo_product_relationships.py  deploy_postgresql.sh  fix_database_storage_issues.py  manage_json_outputs.py  metadata_discovery_stage1.py  migrate_ibcatalogue_cleaned_to_postgresql.py  migrate_schema_to_postgresql.py  monitor_postgresql.py  production_pipeline_runner.py  production_pipeline_runner_v2_3.py  restart_app.sh  setup.py  setup_env.py  start_app.sh  stop_app.sh  test_database_endpoints.py  test_end_to_end_analysis.py  test_enhanced_token_tracking.py  test_full_pipeline_integration.py  test_mode_processor.py  test_product_mapping_sota.py  test_product_matching_database.py  test_scoring_system.py  test_simple.py  test_sota_database.py  test_state_of_the_art_search.py  test_webapp_postgresql.js  validate_config.py  validate_database_schema.py  verify_active_services.py
templates/: improved_industrial_template.html
tests/: __init__.py  conftest.py  test_letter_database_api.py  test_letter_database_service.py
(+304 files in other folders)
